api call successful

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     </section>
 
 
-    <!-- ================= FAQ SECTION ================= -->
+    <!-- ================= FAQ SECTION ================== -->
     <section id="faq" class="py-24 px-6 max-w-4xl mx-auto">
         <h2 class="text-4xl font-bold text-navy text-center mb-16" data-aos="fade-down">Frequently Asked Questions</h2>
         <div class="space-y-4">
