--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
 
 <!-- Custom CSS -->
 <link rel="stylesheet" href="contact.css">
+
 </head>
 
 <body class="bg-white text-slate-800">
@@ -25,11 +26,20 @@
       <img src="img/Six Sigma logo.png" class="w-10 h-10" alt="Six Sigma Solutions Logo">
       <span class="font-bold text-navy uppercase">Six Sigma Solutions</span>
     </a>
+     <div class="hidden lg:flex gap-8 text-sm font-semibold text-slate-600">
+                <a href="index.html#home" class="nav-link">Home</a>
+                <a href="index.html#services" class="nav-link">Services</a>
+                <a href="index.html#about" class="nav-link">About</a>
+                <a href="index.html#faq" class="nav-link">FAQ</a>
+                <a href="contact.html" class="nav-link">Contact</a>
+            </div>
+            <a href="contact.html"><button class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg text-sm font-bold transition">Get Started</button></a>
+        </div>
 
-    <a href="index.html"
+   <!--- <a href="index.html"
       class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg text-sm font-bold transition">
       Back to Home
-    </a>
+    </a>-->
   </div>
 </nav>
 
@@ -95,6 +105,7 @@
 
 <!-- Custom JS -->
 <script src="contact.js"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
