--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/lottie-web/build/player/lottie.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="icon" type="image/png" href="/img/Six Sigma logo.png">
     <link rel="stylesheet" href="index.css">
@@ -26,37 +27,54 @@
                 <span class="font-bold text-navy tracking-tight uppercase">Six Sigma Solutions</span></a>
             </div>
             <div class="hidden lg:flex gap-8 text-sm font-semibold text-slate-600">
-                <a href="#home" class="hover:text-teal transition">Home</a>
-                <a href="#services" class="hover:text-teal transition">Services</a>
-                <a href="#about" class="hover:text-teal transition">About</a>
-                <a href="#faq" class="hover:text-teal transition">FAQ</a>
-                <a href="contact.html" class="hover:text-teal transition">Contact</a>
+                <a href="#home" class="nav-link">Home</a>
+                <a href="#services" class="nav-link">Services</a>
+                <a href="#about" class="nav-link">About</a>
+                <a href="#faq" class="nav-link">FAQ</a>
+                <a href="contact.html" class="nav-link">Contact</a>
             </div>
             <a href="contact.html"><button class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg text-sm font-bold transition">Get Started</button></a>
         </div>
     </nav>
 <!-- ================= HERO SECTION ================= -->
 
-    <header id="home" class="pt-32 pb-20 px-6 max-w-7xl mx-auto grid lg:grid-cols-2 gap-12 items-center">
-        <div data-aos="fade-right">
-            <h1 class="text-5xl lg:text-6xl font-bold text-navy leading-tight mb-6">
-                Driving Excellence Through <span class="text-blue-600">Six Sigma Solutions</span>
-            </h1>
-            <p class="text-lg text-slate-500 mb-8 font-medium">Training | Consulting | Process Improvement | Business Solutions</p>
-            <div class="flex gap-4">
-                <a href="contact.html"><button class="bg-blue-600 text-white px-8 py-4 rounded-xl font-bold flex items-center gap-2 hover:shadow-xl transition">Get Started <span>→</span></button></a>
-            </div>
-        </div>
-        <div class="relative flex justify-center" data-aos="zoom-in">
-  <dotlottie-wc
-    src="https://lottie.host/589f5a14-5d8a-4340-996b-81ed33204136/mtyTud5apr.lottie"
-    autoplay
-    loop
-    style="width: 420px; height: 420px;">
-  </dotlottie-wc>
-</div>
+   <header
+  id="home"
+  class="pt-32 pb-20 px-6 max-w-7xl mx-auto grid lg:grid-cols-2 gap-12 items-center"
+>
 
-    </header>
+  <!-- LEFT CONTENT -->
+  <div data-aos="fade-right">
+    <h1 class="text-5xl lg:text-6xl font-bold text-navy leading-tight mb-6">
+      Driving Excellence Through
+      <span class="text-blue-600">Six Sigma Solutions</span>
+    </h1>
+
+    <p class="text-lg text-slate-500 mb-8 font-medium">
+      Training | Consulting | Process Improvement | Business Solutions
+    </p>
+
+    <div class="flex gap-4">
+      <a href="contact.html">
+        <button
+          class="bg-blue-600 text-white px-8 py-4 rounded-xl font-bold
+                 flex items-center gap-2 hover:shadow-xl transition"
+        >
+          Get Started <span>→</span>
+        </button>
+      </a>
+    </div>
+  </div>
+
+  <!-- RIGHT LOTTIE -->
+  <div class="relative flex justify-center" data-aos="zoom-in">
+    <div class="w-full max-w-[420px] aspect-square">
+      <div id="hero-lottie" class="w-full h-full"></div>
+    </div>
+  </div>
+
+</header>
+
  <!-- ================= SERVICES SECTION ================= -->
     <section id="services" class="py-24 px-6 bg-slate-50">
         <div class="max-w-7xl mx-auto">
@@ -347,40 +365,102 @@
     <!-- ================= OUR PILLARS ================= -->
 
     <section class="py-24 px-6 max-w-7xl mx-auto">
-        <h2 class="text-4xl font-bold text-navy mb-16" data-aos="fade-right">Our Pillars</h2>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
-            <div class="pillar-card group bg-white rounded-[2.5rem] border border-slate-100 shadow-xl overflow-hidden" data-aos="fade-up">
-                <div class="relative h-80 overflow-hidden">
-                    <img src="img/1.jpeg" class="pillar-image w-full h-full object-cover">
-                    <div class="absolute bottom-6 left-6 right-6 p-6 bg-white/90 backdrop-blur rounded-2xl shadow-lg transition-transform group-hover:-translate-y-2">
-                        <h4 class="font-bold text-navy text-xl">Mr. James</h4>
-                        <p class="text-xs text-teal font-bold uppercase tracking-widest mt-1">Chief Executive Officer</p>
-                    </div>
-                </div>
-                <div class="p-8"><p class="text-sm text-slate-500 leading-relaxed">Innovative leader driving organizational excellence across the globe with Six Sigma Solutions.</p></div>
-            </div>
-            <div class="pillar-card group bg-white rounded-[2.5rem] border border-slate-100 shadow-xl overflow-hidden" data-aos="fade-up" data-aos-delay="100">
-                <div class="relative h-80 overflow-hidden">
-                    <img src="img/2.png" class="pillar-image w-full h-full object-cover">
-                    <div class="absolute bottom-6 left-6 right-6 p-6 bg-white/90 backdrop-blur rounded-2xl shadow-lg transition-transform group-hover:-translate-y-2">
-                        <h4 class="font-bold text-navy text-xl">Mr. Jeffrey</h4>
-                        <p class="text-xs text-teal font-bold uppercase tracking-widest mt-1">Founder & Consultant</p>
-                    </div>
-                </div>
-                <div class="p-8"><p class="text-sm text-slate-500 leading-relaxed">Expert consultant who has helped hundreds of companies optimize workflows through Six Sigma Solutions.</p></div>
-            </div>
-            <div class="pillar-card group bg-white rounded-[2.5rem] border border-slate-100 shadow-xl overflow-hidden" data-aos="fade-up" data-aos-delay="200">
-                <div class="relative h-80 overflow-hidden">
-                    <img src="img/Person3.jpg" class="pillar-image w-full h-full object-cover">
-                    <div class="absolute bottom-6 left-6 right-6 p-6 bg-white/90 backdrop-blur rounded-2xl shadow-lg transition-transform group-hover:-translate-y-2">
-                        <h4 class="font-bold text-navy text-xl">Mrs. Natasha</h4>
-                        <p class="text-xs text-teal font-bold uppercase tracking-widest mt-1">Head of Talent</p>
-                    </div>
-                </div>
-                <div class="p-8"><p class="text-sm text-slate-500 leading-relaxed">Strategic lead focused on building cultures of quality and performance improvement.</p></div>
-            </div>
+
+  <h2 class="text-4xl font-bold text-navy mb-16 text-center">
+    Our Pillars
+  </h2>
+
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+
+    <!-- PERSON CARD -->
+    <div class="bg-white rounded-2xl shadow-lg border border-slate-100 p-8 text-center">
+
+      <!-- Avatar -->
+      <div class="relative w-32 h-32 mx-auto mb-6">
+        <img
+          src="img/1.jpeg"
+          alt="Mr. James"
+          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
+          class="w-32 h-32 rounded-full object-cover object-top shadow-md"
+        >
+
+        <!-- Default Avatar -->
+        <div
+          class="hidden w-32 h-32 rounded-full bg-slate-100
+                 flex items-center justify-center
+                 text-2xl font-bold text-navy shadow-md">
+          MJ
         </div>
-    </section>
+      </div>
+
+      <h4 class="font-bold text-navy text-lg">Mr. James</h4>
+      <p class="text-xs text-teal font-bold uppercase tracking-widest mt-1">
+        Chief Executive Officer
+      </p>
+      <p class="mt-4 text-sm text-slate-500 leading-relaxed">
+        Innovative leader driving organizational excellence across the globe.
+      </p>
+    </div>
+
+    <!-- PERSON CARD -->
+    <div class="bg-white rounded-2xl shadow-lg border border-slate-100 p-8 text-center">
+
+      <div class="relative w-32 h-32 mx-auto mb-6">
+        <img
+          src="img/2.png"
+          alt="Mr. Jeffrey"
+          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
+          class="w-32 h-32 rounded-full object-cover object-top shadow-md"
+        >
+
+        <div
+          class="hidden w-32 h-32 rounded-full bg-slate-100
+                 flex items-center justify-center
+                 text-2xl font-bold text-navy shadow-md">
+          MJ
+        </div>
+      </div>
+
+      <h4 class="font-bold text-navy text-lg">Mr. Jeffrey</h4>
+      <p class="text-xs text-teal font-bold uppercase tracking-widest mt-1">
+        Founder & Consultant
+      </p>
+      <p class="mt-4 text-sm text-slate-500 leading-relaxed">
+        Expert consultant helping organizations optimize workflows.
+      </p>
+    </div>
+
+    <!-- PERSON CARD -->
+    <div class="bg-white rounded-2xl shadow-lg border border-slate-100 p-8 text-center">
+
+      <div class="relative w-32 h-32 mx-auto mb-6">
+        <img
+          src="img/"
+          alt="Mrs. Natasha"
+          onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
+          class="w-32 h-32 rounded-full object-cover object-top shadow-md"
+        >
+
+        <div
+          class="hidden w-32 h-32 rounded-full bg-slate-100
+                 flex items-center justify-center
+                 text-2xl font-bold text-navy shadow-md">
+          MN
+        </div>
+      </div>
+
+      <h4 class="font-bold text-navy text-lg">Mrs. Natasha</h4>
+      <p class="text-xs text-teal font-bold uppercase tracking-widest mt-1">
+        Head of Talent
+      </p>
+      <p class="mt-4 text-sm text-slate-500 leading-relaxed">
+        Strategic leader focused on people development and quality culture.
+      </p>
+    </div>
+
+  </div>
+</section>
+
 <!-- ================= FINAL CALL TO ACTION ================= -->
 <section class="bg-teal py-20 px-6 text-center text-white">
   <div class="max-w-4xl mx-auto" data-aos="zoom-in">
@@ -430,15 +510,28 @@
         </div>
 
         <!-- Contact -->
-        <div>
-            <h4 class="font-bold mb-8 text-sm uppercase tracking-widest text-teal">
-                Contact
-            </h4>
-            <ul class="text-slate-400 text-sm space-y-4">
-                <li>📞 +91 98765 43210</li>
-                <li>✉️ info@sixsigmasolutions.com</li>
-            </ul>
-        </div>
+       <div>
+  <h4 class="font-bold mb-8 text-sm uppercase tracking-widest text-teal">
+    Contact
+  </h4>
+
+  <ul class="space-y-5 text-sm text-slate-400">
+    <li class="flex items-center gap-4">
+      <i data-lucide="phone" class="w-4 h-4 text-teal"></i>
+      <a href="tel:+919876543210" class="hover:text-white transition">
+        +91 98765 43210
+      </a>
+    </li>
+
+    <li class="flex items-center gap-4">
+      <i data-lucide="mail" class="w-4 h-4 text-teal"></i>
+      <a href="mailto:sixsigmaspvs@gmail.com" class="hover:text-white transition break-all">
+        Six Sigma Solutions
+      </a>
+    </li>
+  </ul>
+</div>
+
 
         <!-- Social -->
         <div>
@@ -504,7 +597,7 @@
   src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.11/dist/dotlottie-wc.js"
   type="module">
 </script>
-
+<script src="script.js"></script>
 </body>
 </html>
 
