Service Section Updates

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </header>
 
     <!-- ================= SERVICES SECTION ================= -->
-    <section id="services" class="py-24 px-6 bg-slate-50">
+    <section id="services" class="py-24 px-6 bg-slate-white">
         <div class="max-w-7xl mx-auto">
             <div class="mb-16 text-center lg:text-left" data-aos="fade-up">
                 <h2 class="text-4xl font-bold text-navy mb-4">Our Core Solutions</h2>
