--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </section>
 
 <!-- ================= OUR PROCESS  ================= -->
-<section id="process" class="py-24 px-6 bg-slate-50">
+<section id="process" class="py-24 px-6 bg-slate-white">
   <div class="max-w-7xl mx-auto">
 
     <!-- Section Heading -->
@@ -526,111 +526,150 @@
 </section>
 
    <!-- ================= FOOTER ================= -->
-<footer class="bg-navy text-white pt-24 pb-8 px-6">
+<footer class="bg-navy text-white pt-20 pb-5 px-6">
 
-    <!-- Top Footer Content -->
-    <div class="max-w-7xl mx-auto grid md:grid-cols-4 gap-12 border-b border-white/10 pb-16 mb-8">
+  <!-- Top Footer Content -->
+  <div class="max-w-7xl mx-auto grid md:grid-cols-4 gap-12 border-b border-white/10 pb-16 mb-8">
 
-        <!-- Brand -->
-        <div>
-            <div class="flex items-center gap-2 mb-8">
-                <div class="w-8 h-8 bg-white flex items-center justify-center rounded">
-                    <img src="img/Six Sigma logo.png" alt="Six Sigma Solutions Logo" >
-                </div>
-                <span class="font-bold tracking-tight">SIX SIGMA SOLUTIONS</span>
-            </div>
-            <p class="text-slate-400 text-sm italic">
-                Empowering organizations through quality driven training and consulting.
-            </p>
+    <!-- ================= BRAND + SOCIAL ================= -->
+    <div>
+      <div class="flex items-center gap-2 mb-6">
+        <div class="w-8 h-8 bg-white flex items-center justify-center rounded">
+          <a href="#home"><img src="img/Six Sigma logo.png" alt="Six Sigma Solutions Logo">
         </div>
+        <span class="font-bold tracking-tight">SIX SIGMA SOLUTIONS</span></a>
+      </div>
 
-        <!-- Quick Links -->
-        <div>
-            <h4 class="font-bold mb-8 text-sm uppercase tracking-widest text-teal">
-                Quick Links
-            </h4>
-            <ul class="text-slate-400 text-sm space-y-4">
-                <li><a href="#home" class="hover:text-white transition">Home</a></li>
-                <li><a href="#services" class="hover:text-white transition">Services</a></li>
-                <li><a href="#about" class="hover:text-white transition">About Us</a></li>
-                <li><a href="contact.html" class="hover:text-white transition">Contact</a></li>
-            </ul>
-        </div>
+      <p class="text-slate-400 text-sm italic mb-8">
+        Empowering organizations through quality driven training and consulting.
+      </p>
 
-        <!-- Contact -->
-       <div>
-  <h4 class="font-bold mb-8 text-sm uppercase tracking-widest text-teal">
-    Contact
-  </h4>
+      <!-- Social Section -->
+      <div class="social-section">
+        <h4 class="social-heading">Social</h4>
 
-  <ul class="space-y-5 text-sm text-slate-400">
-    <li class="flex items-center gap-4">
-      <i data-lucide="phone" class="w-4 h-4 text-teal"></i>
-      <a href="tel:+919884590009" class="hover:text-white transition">
-        +91 9884590009
-      </a>
-    </li>
+        <ul class="wrapper">
+          <li class="icon linkedin">
+            <a href="#" aria-label="LinkedIn">
+              <span class="tooltip">LinkedIn</span>
+              <!-- SVG -->
+              <svg viewBox="0 0 448 512" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/>
+                </svg>
+            </a>
+          </li>
 
-    <li class="flex items-center gap-4">
-      <i data-lucide="mail" class="w-4 h-4 text-teal"></i>
-      <a href="mailto:sixsigmaspvs@gmail.com" class="hover:text-white transition break-all">
-        Six Sigma Solutions
-      </a>
-    </li>
-      <li class="flex  gap-4">
-          <i data-lucide="map-pinned" class="w-7 h-7 text-teal"></i>
-          <a href="https://maps.app.goo.gl/NM5TXdMvArg4puxQ7" class="hover:text-white transition">
-              Six Sigma Solutions <br>
-              NKC Towers 1 st Floor,<br> opp Govt. Engineering College Kottagoundampatti, Salem, <br>Tamil Nadu - 636011, India.
+          <li class="icon facebook">
+            <a href="#" aria-label="Facebook">
+              <span class="tooltip">Facebook</span>
+              <!-- SVG -->
+               <svg viewBox="0 0 320 512" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"></path>
+                </svg>
+            </a>
+          </li>
+
+          <li class="icon twitter">
+            <a href="#" aria-label="X">
+              <span class="tooltip">X</span>
+              <!-- SVG -->
+               <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M18.244 2H21.97l-8.13 9.293L23.5 22h-7.38l-5.78-7.46L4.92 22H1.19l8.68-9.92L.5 2h7.56l5.23 6.78L18.24 2z"/>
+                </svg>
+            </a>
+          </li>
+
+          <li class="icon instagram">
+            <a href="#" aria-label="Instagram">
+              <span class="tooltip">Instagram</span>
+              <!-- SVG -->
+               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                    <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"></path>
+                </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- ================= QUICK LINKS ================= -->
+    <div>
+      <h4 class="font-bold mb-8 text-sm uppercase tracking-widest text-teal">
+        Quick Links
+      </h4>
+      <ul class="text-slate-400 text-sm space-y-4">
+        <li><a href="#home" class="hover:text-white transition">Home</a></li>
+        <li><a href="#services" class="hover:text-white transition">Services</a></li>
+        <li><a href="#about" class="hover:text-white transition">About Us</a></li>
+        <li><a href="contact.html" class="hover:text-white transition">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- ================= SERVICES ================= -->
+    <div>
+      <h4 class="font-bold mb-8 text-sm uppercase tracking-widest text-teal">
+        Services
+      </h4>
+      <ul class="text-slate-400 text-sm space-y-4">
+        <li><a href="#" class="hover:text-white transition">Web Developement</a></li>
+        <li><a href="#" class="hover:text-white transition">Mobile App Development</a></li>
+        <li><a href="#" class="hover:text-white transition">Web Design & Development</a></li>
+        <li><a href="#" class="hover:text-white transition">AI Agents</a></li>
+        <li><a href="#" class="hover:text-white transition">Digital Marketing</a></li>
+      </ul>
+    </div>
+
+    <!-- ================= CONTACT ================= -->
+    <div>
+      <h4 class="font-bold mb-8 text-sm uppercase tracking-widest text-teal">
+        Contact
+      </h4>
+
+      <ul class="space-y-5 text-sm text-slate-400">
+        <li class="flex items-center gap-4">
+          <i data-lucide="phone" class="w-4 h-4 text-teal"></i>
+          <a href="tel:+919884590009" class="hover:text-white transition">
+            +91 98845 90009
           </a>
-      </li>
-  </ul>
-</div>
+        </li>
 
+        <li class="flex items-center gap-4">
+          <i data-lucide="mail" class="w-4 h-4 text-teal"></i>
+          <a href="mailto:sixsigmaspvs@gmail.com"
+             class="hover:text-white transition break-all">
+            sixsigmaspvs@gmail.com
+          </a>
+        </li>
 
-        <!-- Social -->
-        <div>
-            <h4 class="font-bold mb-8 text-sm uppercase tracking-widest text-teal">
-                Social
-            </h4>
-            <div class="flex gap-4">
-                <a href="https://www.linkedin.com" target="_blank"
-                   class="w-10 h-10 bg-white/5 rounded-xl flex items-center justify-center hover:bg-teal transition">
-                    <i data-lucide="linkedin" class="w-5 h-5"></i>
-                </a>
-                <a href="https://www.instagram.com" target="_blank"
-                   class="w-10 h-10 bg-white/5 rounded-xl flex items-center justify-center hover:bg-teal transition">
-                    <i data-lucide="instagram" class="w-5 h-5"></i>
-                </a>
-                <a href="https://www.x.com" target="_blank"
-                  class="w-10 h-10 bg-white/5 rounded-xl flex items-center justify-center hover:bg-teal transition">
-                    <svg viewBox="0 0 24 24"aria-hidden="true"class="w-5 h-5 fill-current">
-                       <path d="M18.244 2H21.97l-8.13 9.293L23.5 22h-7.38l-5.78-7.46L4.92 22H1.19l8.68-9.92L.5 2h7.56l5.23 6.78L18.24 2z"/>
-                    </svg>
-                </a>
-            </div>
-        </div>
-
+        <li class="flex gap-4">
+          <i data-lucide="map-pinned" class="w-6 h-6 text-teal"></i>
+          <a href="https://maps.app.goo.gl/NM5TXdMvArg4puxQ7"
+             class="hover:text-white transition leading-relaxed">
+            Six Sigma Solutions<br>
+            NKC Towers, 1st Floor,<br>
+            Opp Govt. Engineering College,<br>
+            Salem – 636011, Tamil Nadu, India
+          </a>
+        </li>
+      </ul>
     </div>
 
-    <!-- Bottom Footer -->
-    <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-4
-                text-[10px] text-slate-500 uppercase tracking-widest font-bold">
+  </div>
 
-        <!-- Left -->
-        <p>
-            © 2026 Six Sigma Solutions. All rights reserved.
-        </p>
+  <!-- ================= BOTTOM FOOTER ================= -->
+  <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center gap-4
+              text-[10px] text-slate-500 uppercase tracking-widest font-bold">
 
-        <!-- Right -->
-        <div class="flex gap-6">
-            <a href="#" class="hover:text-white transition">Privacy Policy</a>
-            <a href="#" class="hover:text-white transition">Terms & Conditions</a>
-        </div>
+    <p>© 2026 Six Sigma Solutions. All rights reserved.</p>
 
+    <div class="flex gap-6">
+      <a href="#" class="hover:text-white transition">Privacy Policy</a>
+      <a href="#" class="hover:text-white transition">Terms & Conditions</a>
     </div>
+  </div>
 
 </footer>
+
 
 <!-- ================= SCRIPTS ================= -->
 
