New pages additions and updates to index.html

--- a/index.html
+++ b/index.html
@@ -663,8 +663,8 @@
     <p>© 2026 Six Sigma Solutions. All rights reserved.</p>
 
     <div class="flex gap-6">
-      <a href="#" class="hover:text-white transition">Privacy Policy</a>
-      <a href="#" class="hover:text-white transition">Terms & Conditions</a>
+      <a href="privacy-policy.html" class="hover:text-white transition">Privacy Policy</a>
+      <a href="terms-and-conditions.html" class="hover:text-white transition">Terms & Conditions</a>
     </div>
   </div>
 
