--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,23 +3,22 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Contact | Six Sigma Solutions</title>
-
-<!-- Tailwind -->
-<script src="https://cdn.tailwindcss.com"></script>
-
-<!-- Fonts & Libraries -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-<!-- Custom CSS -->
-<link rel="stylesheet" href="contact.css">
+<title>Privacy Policy | Six Sigma Solutions</title>
 <link rel="stylesheet" href="index.css">
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+<style>
+body { font-family: 'Poppins', sans-serif; }
+.bg-navy { background-color: #0A2540; }
+.text-navy { color: #0A2540; }
+.text-teal { color: #14B8A6; }
+</style>
 </head>
 
-<body class="bg-white text-slate-800">
+<body class="bg-slate-50 text-slate-700">
 
-<!-- ================= NAVBAR ================= -->
+<!-- HEADER -->
 <nav class="fixed w-full z-50 top-0 bg-white/90 backdrop-blur-md border-b border-slate-100">
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
     <a href="index.html" class="flex items-center gap-2">
@@ -43,61 +42,114 @@
   </div>
 </nav>
 
-<!-- ================= CONTACT SECTION ================= -->
-<section class="pt-32 pb-24 px-6 max-w-4xl mx-auto">
+<!-- CONTENT -->
+<main class="max-w-4xl mx-auto px-6 py-16 bg-white mt-10 rounded-2xl shadow-sm">
 
-  <div class="p-12 bg-white border border-slate-200 rounded-[2rem] shadow-xl" data-aos="fade-up">
-    <h2 class="text-3xl font-bold text-navy mb-4">Let's Build Something Amazing</h2>
-    <p class="text-slate-500 mb-12">
-      Ready to optimize your business? Reach out to us today.
-    </p>
+<h1 class="text-3xl font-bold text-navy mb-4">Privacy Policy</h1>
+<p class="text-sm text-slate-500 mb-10">Last updated: January 2026</p>
 
-    <form id="contactForm" method="POST" action="/contact" class="space-y-8" novalidate>
+<div class="space-y-10 text-sm leading-relaxed">
 
-      <div class="grid md:grid-cols-2 gap-8">
+<p>
+Six Sigma Solutions (“we”, “our”, “us”) is committed to protecting the privacy and personal
+information of our users, clients, and visitors. This Privacy Policy explains how we collect,
+use, disclose, and safeguard your information when you visit our website or use our services.
+</p>
 
-        <div class="input-wrapper">
-          <input type="text" name="fullName" autocomplete="name" maxlength="40"
-            placeholder="Full Name"
-            class="w-full border-b-2 py-4 focus:border-teal outline-none"
-            oninput="this.value=this.value.replace(/[^a-zA-Z\s]/g,'')">
-        </div>
-
-        <div class="input-wrapper">
-          <input type="tel" name="mobile" autocomplete="tel" maxlength="10"
-            inputmode="numeric" placeholder="Mobile Number"
-            class="w-full border-b-2 py-4 focus:border-teal outline-none"
-            oninput="this.value=this.value.replace(/[^0-9]/g,'').slice(0,10)">
-        </div>
-
-      </div>
-
-      <div class="input-wrapper">
-        <input type="email" name="email" autocomplete="email" maxlength="80"
-          placeholder="Email Address"
-          class="w-full border-b-2 py-4 focus:border-teal outline-none">
-      </div>
-
-      <div class="input-wrapper">
-        <textarea name="message" rows="3" minlength="10" maxlength="500"
-          placeholder="Tell us about your project"
-          class="w-full border-b-2 py-4 focus:border-teal outline-none"></textarea>
-      </div>
-
-      <button type="submit"
-        class="block w-full min-h-[56px] bg-teal-600 text-white py-5 rounded-xl
-               font-bold text-lg shadow-lg hover:bg-teal-700 transition
-               focus:outline-none focus:ring-4 focus:ring-teal-300">
-        Send Message
-      </button>
-
-      <p id="formStatus" class="text-center text-sm font-semibold"
-         role="alert" aria-live="polite"></p>
-
-    </form>
-  </div>
-
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">1. Information We Collect</h2>
+<p>We may collect the following types of information:</p>
+<ul class="list-disc ml-6 mt-2 space-y-2">
+<li>Personal identification information (name, email address, phone number)</li>
+<li>Business-related information submitted via forms</li>
+<li>Technical data such as IP address, browser type, device information</li>
+<li>Communication data when you contact us</li>
+</ul>
 </section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">2. How We Collect Information</h2>
+<p>
+Information is collected when you voluntarily fill out contact forms, request services,
+subscribe to communications, or interact with our website.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">3. Purpose of Data Collection</h2>
+<ul class="list-disc ml-6 space-y-2">
+<li>Responding to inquiries and service requests</li>
+<li>Providing consulting, training, and support services</li>
+<li>Improving website functionality and user experience</li>
+<li>Internal analysis and record-keeping</li>
+<li>Legal and compliance obligations</li>
+</ul>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">4. Cookies & Tracking Technologies</h2>
+<p>
+Our website may use cookies and similar technologies to enhance user experience.
+You can disable cookies via your browser settings, though some features may not function properly.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">5. Data Security</h2>
+<p>
+We use appropriate technical and organizational measures to protect personal data
+from unauthorized access, alteration, disclosure, or destruction.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">6. Data Sharing & Disclosure</h2>
+<p>
+We do not sell or rent your personal data. Information may be shared only:
+</p>
+<ul class="list-disc ml-6 space-y-2">
+<li>With trusted service providers under confidentiality agreements</li>
+<li>To comply with legal obligations</li>
+<li>To protect rights, property, or safety</li>
+</ul>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">7. Data Retention</h2>
+<p>
+We retain personal data only for as long as necessary to fulfill the purposes outlined
+in this policy or as required by law.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">8. Your Rights</h2>
+<ul class="list-disc ml-6 space-y-2">
+<li>Right to access your personal data</li>
+<li>Right to correction or deletion</li>
+<li>Right to withdraw consent</li>
+</ul>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">9. Changes to This Policy</h2>
+<p>
+We reserve the right to update this Privacy Policy at any time. Updates will be posted
+on this page with a revised date.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">10. Contact Information</h2>
+<p>
+Email: <a href="mailto:sixsigmaspvs@gmail.com" class="text-teal font-semibold">sixsigmaspvs@gmail.com</a><br>
+Phone: +91 9884590009
+</p>
+</section>
+
+</div>
+</main>
+
    <!-- ================= FOOTER ================= -->
 <footer class="bg-navy text-white pt-20 pb-5 px-6">
 
@@ -242,14 +294,6 @@
   </div>
 
 </footer>
-
-<!-- Libraries -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="https://unpkg.com/lucide@latest"></script>
-
-<!-- Custom JS -->
-<script src="contact.js"></script>
-<script src="script.js"></script>
 
 </body>
 </html>
