--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -3,23 +3,21 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Contact | Six Sigma Solutions</title>
-
-<!-- Tailwind -->
-<script src="https://cdn.tailwindcss.com"></script>
-
-<!-- Fonts & Libraries -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
-<!-- Custom CSS -->
-<link rel="stylesheet" href="contact.css">
+<title>Terms & Conditions | Six Sigma Solutions</title>
 <link rel="stylesheet" href="index.css">
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+<style>
+body { font-family: 'Poppins', sans-serif; }
+.bg-navy { background-color: #0A2540; }
+.text-navy { color: #0A2540; }
+.text-teal { color: #14B8A6; }
+</style>
 </head>
 
-<body class="bg-white text-slate-800">
+<body class="bg-slate-50 text-slate-700">
 
-<!-- ================= NAVBAR ================= -->
 <nav class="fixed w-full z-50 top-0 bg-white/90 backdrop-blur-md border-b border-slate-100">
   <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
     <a href="index.html" class="flex items-center gap-2">
@@ -43,61 +41,96 @@
   </div>
 </nav>
 
-<!-- ================= CONTACT SECTION ================= -->
-<section class="pt-32 pb-24 px-6 max-w-4xl mx-auto">
+<main class="max-w-4xl mx-auto px-6 py-16 bg-white mt-10 rounded-2xl shadow-sm">
 
-  <div class="p-12 bg-white border border-slate-200 rounded-[2rem] shadow-xl" data-aos="fade-up">
-    <h2 class="text-3xl font-bold text-navy mb-4">Let's Build Something Amazing</h2>
-    <p class="text-slate-500 mb-12">
-      Ready to optimize your business? Reach out to us today.
-    </p>
+<h1 class="text-3xl font-bold text-navy mb-4">Terms & Conditions</h1>
+<p class="text-sm text-slate-500 mb-10">Effective Date: January 2026</p>
 
-    <form id="contactForm" method="POST" action="/contact" class="space-y-8" novalidate>
+<div class="space-y-10 text-sm leading-relaxed">
 
-      <div class="grid md:grid-cols-2 gap-8">
-
-        <div class="input-wrapper">
-          <input type="text" name="fullName" autocomplete="name" maxlength="40"
-            placeholder="Full Name"
-            class="w-full border-b-2 py-4 focus:border-teal outline-none"
-            oninput="this.value=this.value.replace(/[^a-zA-Z\s]/g,'')">
-        </div>
-
-        <div class="input-wrapper">
-          <input type="tel" name="mobile" autocomplete="tel" maxlength="10"
-            inputmode="numeric" placeholder="Mobile Number"
-            class="w-full border-b-2 py-4 focus:border-teal outline-none"
-            oninput="this.value=this.value.replace(/[^0-9]/g,'').slice(0,10)">
-        </div>
-
-      </div>
-
-      <div class="input-wrapper">
-        <input type="email" name="email" autocomplete="email" maxlength="80"
-          placeholder="Email Address"
-          class="w-full border-b-2 py-4 focus:border-teal outline-none">
-      </div>
-
-      <div class="input-wrapper">
-        <textarea name="message" rows="3" minlength="10" maxlength="500"
-          placeholder="Tell us about your project"
-          class="w-full border-b-2 py-4 focus:border-teal outline-none"></textarea>
-      </div>
-
-      <button type="submit"
-        class="block w-full min-h-[56px] bg-teal-600 text-white py-5 rounded-xl
-               font-bold text-lg shadow-lg hover:bg-teal-700 transition
-               focus:outline-none focus:ring-4 focus:ring-teal-300">
-        Send Message
-      </button>
-
-      <p id="formStatus" class="text-center text-sm font-semibold"
-         role="alert" aria-live="polite"></p>
-
-    </form>
-  </div>
-
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">1. Acceptance of Terms</h2>
+<p>
+By accessing this website, you agree to be bound by these Terms and Conditions.
+If you do not agree, you must discontinue use of the website.
+</p>
 </section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">2. Website Usage</h2>
+<p>
+Content is provided for general informational purposes only and may change without notice.
+Unauthorized use is strictly prohibited.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">3. Intellectual Property Rights</h2>
+<p>
+All content, designs, logos, graphics, and materials are owned by Six Sigma Solutions
+and protected under applicable intellectual property laws.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">4. Services & Training</h2>
+<p>
+All consulting and training services are subject to availability, scope definitions,
+pricing agreements, and written contracts where applicable.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">5. User Responsibilities</h2>
+<ul class="list-disc ml-6 space-y-2">
+<li>Provide accurate information</li>
+<li>Not misuse or interfere with the website</li>
+<li>Not upload harmful or illegal content</li>
+</ul>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">6. Limitation of Liability</h2>
+<p>
+Six Sigma Solutions shall not be liable for any direct, indirect, incidental,
+or consequential damages arising from website use.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">7. Third-Party Links</h2>
+<p>
+This website may contain links to third-party websites.
+We are not responsible for their content or practices.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">8. Termination</h2>
+<p>
+We reserve the right to restrict or terminate access without notice
+if these terms are violated.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">9. Governing Law</h2>
+<p>
+These terms shall be governed by and construed in accordance with the laws of India.
+</p>
+</section>
+
+<section>
+<h2 class="text-lg font-semibold text-navy mb-2">10. Contact Information</h2>
+<p>
+Email: <a href="mailto:sixsigmaspvs@gmail.com" class="text-teal font-semibold">sixsigmaspvs@gmail.com</a><br>
+Phone: +91 9884590009
+</p>
+</section>
+
+</div>
+</main>
+
    <!-- ================= FOOTER ================= -->
 <footer class="bg-navy text-white pt-20 pb-5 px-6">
 
@@ -242,14 +275,6 @@
   </div>
 
 </footer>
-
-<!-- Libraries -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="https://unpkg.com/lucide@latest"></script>
-
-<!-- Custom JS -->
-<script src="contact.js"></script>
-<script src="script.js"></script>
 
 </body>
 </html>
